<resources>
    <string name="app_name">SEG2105_F19_Project</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dontHaveAnAccount">Dont have an account?</string>
    <string name="createAccount">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="youAreA">You are a...</string>
    <string name="patient">Patient</string>
    <string name="employee">Employee</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="welcome">Welcome!</string>
    <string name="viewAccounts">View Accounts</string>
    <string name="viewServices">View Services</string>
    <string name="logout">Logout</string>
    <string name="addService">Add Service</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="thisIsPerformedByA">This is performed by a...</string>
    <string name="doctor">Doctor</string>
    <string name="nurse">Nurse</string>
    <string name="staff">Staff</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clinicInfo">Clinic Info</string>
    <string name="hours">View Hours</string>
    <string name="completeProfile">Complete Clinic Profile</string>
    <string name="clinicName">Clinic Name</string>
    <string name="address">Address</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="acceptedInsuranceTypes">Accepted Insurance Types</string>
    <string name="acceptedPaymentMethods">Accepted Payment Methods</string>
    <string name="next">Next</string>
    <string name="to">to</string>
    <string name="editClinicHours">Edit Clinic Hours</string>
    <string name="checkIfOpen">Check if open</string>
    <string name="sunday">Sunday:</string>
    <string name="monday">Monday:</string>
    <string name="tuesday">Tuesday:</string>
    <string name="wednesday">Wednesday:</string>
    <string name="thursday">Thursday:</string>
    <string name="friday">Friday:</string>
    <string name="saturday">Saturday:</string>
    <string name="save">Save</string>
    <string name="use24hrClock">*Please use the 24hr clock*</string>
    <string name="postalCode">Postal Code</string>
    <string name="searchForClinic">Search for clinic</string>
    <string name="searchByAddress">Search by address</string>
    <string name="searchByHours">Search by Hours</string>
    <string name="searchByServices">Search by Services</string>
    <string name="viewAll">View all</string>
    <string name="search">Search</string>
    <string name="checkIn">Check In</string>
    <string name="bookAppointment">Book Appointment</string>
    <string name="viewReviews">View reviews</string>
    <string name="viewHours">View Hours</string>
    <string name="noResultsFound">Your search has found no results.</string>
    <string name="chooseADate">Choose a date:</string>
    <string name="chooseATime">Choose a time:</string>
    <string name="time">Time</string>
    <string name="rate">Rate</string>
    <string name="five">/ 5</string>
    <string name="comments">Comments</string>
</resources>
